# clippy-vision

./: .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt
Clippy_Vision.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agent/: conversation.py  memory.py  react_agent.py  retrieval.py  tools.py
classifier/: tier_one_classifier.py  tier_two_classifier.py  tier_zero_classifier.py  vision_classifier.py  worker.py
core/: baseline.py  distil.py  events.py  llm_gateway.py  memory_store.py  screen_capture.py  screenshot_processor.py  storage.py  summarizer.py  vision.py
